k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amara-backend
  namespace: __NS__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amara-backend
  template:
    metadata:
      labels:
        app: amara-backend
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: app
          image: ghcr.io/algnot/amara-backend:__TAG__
          volumeMounts:
            - name: amara-secrets-vol
              mountPath: /app/secret
          ports:
            - containerPort: 9000
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: "1024Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
      volumes:
        - name: amara-secrets-vol
          secret:
            secretName: amara-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: amara-backend
  namespace: __NS__
spec:
  type: ClusterIP
  selector:
    app: amara-backend
  ports:
    - name: http
      port: 80
      targetPort: 9000
